--- a/fila-frontend/src/componentes/MeuInput.css
+++ b/fila-frontend/src/componentes/MeuInput.css
@@ -1,14 +1,28 @@
+.label {
+    margin-bottom: 20px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 18px;
+  }
+  
+  .Myinput {
+    width: 100%;
+    height: 50px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+    background-color: #fff;
+    box-sizing: border-box;
+    font-size: 16px;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  }
 
-.label{
-    display: flex;
-    flex-direction: column;
-    margin-top: 8px;
-    margin-bottom: 5px;
-    font-size: 25px;
-}
-
-.Myinput {
-    margin-top: 3px;
-    height: 32px;
-    border-radius: 6px;
-}
+  .Myinput:focus {
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+  }
+  
