--- a/fila-frontend/src/paginas/Home.css
+++ b/fila-frontend/src/paginas/Home.css
@@ -1,6 +1,16 @@
-.senha {
-    color: rgb(0, 0, 0);
-}
+.App {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f0f0f0;
+  }
+  
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+
 
 .fundo {
    margin-top: 25%;
